# grateful-assistant

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.continue/rules/: new-rule.md
cmake/: options.cmake
docs/: api.md  architecture.md  configuration.md  development.md  performance.md  readme_zhCN.md  界面设计.md
include/ai/: AI.h  AssistantRole.h  Intent.h  IntentManager.h  Model.h  Provider.h  ProviderManager.h  RoleManager.h
include/db/: DatabaseConnection.h  DatabaseManager.h
include/gui/: MainWindow.h
include/kernel/: Configuration.h  DynamicLinker.h  EventBus.h  Events.h  Extension.h  IService.h  Logger.h  ServiceManager.h  Syncronizer.h  WeatherInfo.h
include/kernel/entities/: Entity.h  ModelInfo.h  Todo.h
include/service/audio/: AudioService.h
include/service/sync/: SyncService.h
include/service/system/: SystemService.h
include/service/todo/: TodoService.h
include/service/weather/: WeatherService.h
resource/: res.qrc
resource/style/: dark.qss  light.qss
resource/templates/: appconfig.json  extensions.json
resource/templates/prompts/: intent_recognition.prompt  wake_word.prompt
source/ai/: AI.cpp  CMakeLists.txt  IntentManager.cpp  Model.cpp  Provider.cpp  ProviderManager.cpp  RoleManager.cpp
source/ai/roles/: AwakeWordVerifyRole.cpp  AwakeWordVerifyRole.h  SystemRole.cpp  SystemRole.h
source/app/: CMakeLists.txt  main.cpp
source/db/: CMakeLists.txt  DatabaseManager.cpp  SiliconFlowModelInfoConnection.cpp  SiliconFlowModelInfoConnection.h  TodoConnection.cpp  TodoConnection.h
source/extensions/ai/providers/: CMakeLists.txt  OllamaProvider.cpp  OllamaProvider.h  ProvidersExtension.cpp  ProvidersExtension.h  SiliconFlowModel.h  SiliconFlowModelExecutors.cpp  SiliconFlowModelExecutors.h  SiliconFlowProvider.cpp  SiliconFlowProvider.h
source/gui/: CMakeLists.txt  Card.cpp  Card.h  DateTimeCard.cpp  DateTimeCard.h  FloatMessage.cpp  FloatMessage.h  ListenContent.cpp  ListenContent.h  MainWindow.cpp  TodoInput.cpp  TodoInput.h  TodoList.cpp  TodoList.h  TodoListItem.cpp  TodoListItem.h  WeatherCard.cpp  WeatherCard.h
source/kernel/: CMakeLists.txt  Configuration.cpp  DynamicLinker.cpp  EventBus.cpp  Extension.cpp  IService.cpp  Logger.cpp  ServiceManager.cpp  Syncronizer.cpp
source/service/: CMakeLists.txt
source/service/audio/: AudioService.cpp  AudioState.h  AudioWorker.cpp  AudioWorker.h  AwaitContentState.h  AwaitWakewordState.h  CMakeLists.txt  PortaudioWrapper.cpp  PortaudioWrapper.h  VADDetector.cpp  VADDetector.h  VoicePrintDetector.h
source/service/audio/webrtc_vad/: CMakeLists.txt
source/service/audio/webrtc_vad/examples/: CMakeLists.txt  main.cc
source/service/audio/webrtc_vad/vad/: CMakeLists.txt
source/service/todo/: CMakeLists.txt  TodoAssistant.cpp  TodoAssistant.h  TodoIntent.h  TodoService.cpp
source/service/todo/resource/: todo.prompt
source/service/weather/: AMapIPLocator.cpp  AMapIPLocator.h  AMapInfo.h  AMapWeatherFetcher.cpp  AMapWeatherFetcher.h  CMakeLists.txt  DDNSOrayFetcher.hpp  IP3322Fetcher.hpp  IPFetcher.cpp  IPFetcher.h  IPLocator.h  MyIpFetcher.hpp  WeatherFetcher.h  WeatherService.cpp  YinghualuoFetcher.hpp
